add descriptions to each sub-page, and made CSS modifications to default -- afterwards, can make different branches

--- a/css/resort-style.css
+++ b/css/resort-style.css
@@ -1,16 +1,22 @@
 h1 {
-  color:blue;
+  color:black;
   text-align: center;
 }
 
 h2 {
-  color:purple;
+  color:black;
+  text-align: center;
 }
 
 h3 {
-  color:orange;
+  color:black;
 }
 
 body {
-  background-color: teal;
+  background-color: white;
+}
+
+p {
+  color:black;
+  font-size: larger;
 }
